# yfinance-agentic-workflow

./: .gitignore  FASE1_IMPLEMENTATION.md  FASE2_CHECKLIST.txt  FASE2_IMPLEMENTATION.md  FASE2_INDICE.md  FASE2_RESUMEN_EJECUTIVO.md  FASE2_VALIDATION_REPORT.md  FASE3_IMPLEMENTATION.md  LICENSE  PLOTLY_CHARTS_GUIDE.md  README.md  VISUAL_DEMO.md  docker-compose.yml  example.env  mcp_config.example.json  plantilla.md  pyproject.toml  requirements.txt  run.py
.github/agents/: ai-engineer.agent.md  analista-financiero.agent.md  analista-financiero.md  product-owner.agent.md  q-a-tester.agent.md  web-app-developer.agent.md
.github/hooks/: README.md  pre-commit-validator.json
.github/instructions/: evals.instructions.md  (+8 more)
app/: config.py  main.py  models.py
examples/: metrics-sample.json
tests/: run_staged_tests.py  run_tavily_tests.py  test_agent_service.py  test_analista_agent_status.py  test_app_main.py  test_charts_integration.py  test_check_env.py  test_config.py  test_configuration_files.py  test_consolidate_reports.py  test_csv_service.py  test_fase2_validation.py  test_generation_service.py  test_generation_service_metrics_automation.py  test_health_routes.py  test_markdown_rendering.py  test_models.py  test_module_a.py  test_pre_commit_hook.py  test_pre_commit_validator.py  test_report_service.py  test_reports_routes_integration.py  test_researcher.py  test_tavily_api_migration.py  test_tavily_retry_metrics.py  test_utils.py  test_validate_generated_json_script.py  test_validate_pre_commit_new.py  test_yfinance_report_generate.py
web/: index.html  report.html
(+61 files in other folders)
