[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-reports-api"
version = "1.0.0"
description = "FastAPI application for financial reports analysis"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.32.1",
    "pydantic==2.10.0",
    "yfinance==1.3.0",
    "pandas>=3.0.0",
    "numpy>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "flake8>=6.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.flake8]
max-line-length = 100
extend-ignore = ['E203', 'W503']
